--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,18 @@ categories = ["web-programming::http-client"]
 edition = "2018"
 
 [dependencies]
-base64 = "0.9.3"
+base64 = "0.10.1"
 chrono = "0.4.6"
-dirs = "1.0.4"
-failure = "0.1.2"
-http = "0.1.14"
+dirs = "1.0.5"
+failure = "0.1.5"
+http = "0.1.17"
 lazy_static = "1.3.0"
-openssl = "0.10.12"
-reqwest = "0.9.2"
-serde = "1.0.79"
-serde_derive = "1.0.79"
+openssl = "0.10.21"
+reqwest = "0.9.16"
+serde = "1.0.90"
+serde_derive = "1.0.90"
 serde_json = "1.0.39"
-serde_yaml = "0.8.5"
+serde_yaml = "0.8.8"
 time = "0.1.42"
 url = "1.7.2"
 
@@ -32,5 +32,14 @@ package = "futures-preview"
 features = ["compat"]
 
 [dev-dependencies]
-tempfile = "3.0.4"
-k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi-codegen", tag = "v0.4.0", features = ["v1_13"] }
+tempfile = "3.0.7"
+
+[dev-dependencies.k8s-openapi]
+git = "https://github.com/Arnavion/k8s-openapi-codegen"
+rev = "b5b46233b7752f0a99a106c9c7d07f7387c41787"
+features = ["v1_14"]
+
+[dev-dependencies.tokio]
+git = "https://github.com/tokio-rs/tokio"
+rev = "0e400af78c049c4b52fa4cb346237b43218b0ec9"
+features = ["async-await-preview"]
