--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,19 @@ dirs = "1.0.5"
 failure = "0.1.5"
 http = "0.1.17"
 lazy_static = "1.3.0"
-openssl = "0.10.21"
-reqwest = "0.9.16"
-serde = "1.0.90"
-serde_derive = "1.0.90"
+openssl = "0.10.22"
+reqwest = "0.9.17"
+serde = "1.0.91"
+serde_derive = "1.0.91"
 serde_json = "1.0.39"
-serde_yaml = "0.8.8"
+serde_yaml = "0.8.9"
 time = "0.1.42"
 url = "1.7.2"
+
+[dependencies.oauth]
+git = "https://github.com/EmbarkStudios/tiny_oauth"
+package = "tiny_oauth"
+features = [ "gcp" ]
 
 [dependencies.futures]
 version = "0.3.0-alpha.14"
