--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,34 +17,28 @@ dirs = "1.0.5"
 failure = "0.1.5"
 http = "0.1.17"
 lazy_static = "1.3.0"
-openssl = "0.10.22"
-reqwest = "0.9.17"
-serde = "1.0.91"
-serde_derive = "1.0.91"
-serde_json = "1.0.39"
+openssl = "0.10.24"
+reqwest = "0.9.19"
+serde = { version = "1.0.97", features = ["derive"] }
+serde_json = "1.0.40"
 serde_yaml = "0.8.9"
 time = "0.1.42"
 url = "1.7.2"
 
 [dependencies.oauth]
-git = "https://github.com/EmbarkStudios/tiny_oauth"
-package = "tiny_oauth"
-features = [ "gcp" ]
+package = "tame-oauth"
+version = "0.2.1"
+features = ["gcp"]
 
 [dependencies.futures]
-version = "0.3.0-alpha.14"
+version = "=0.3.0-alpha.14"
 package = "futures-preview"
 features = ["compat"]
 
 [dev-dependencies]
-tempfile = "3.0.7"
+tempfile = "3.1.0"
 
 [dev-dependencies.k8s-openapi]
 git = "https://github.com/Arnavion/k8s-openapi-codegen"
 rev = "b5b46233b7752f0a99a106c9c7d07f7387c41787"
 features = ["v1_14"]
-
-[dev-dependencies.tokio]
-git = "https://github.com/tokio-rs/tokio"
-rev = "0e400af78c049c4b52fa4cb346237b43218b0ec9"
-features = ["async-await-preview"]
